# AICore-OS

./: Cargo.toml  README.md
.cargo/: config.toml
apps/aicore/: Cargo.toml
apps/aicore-cli/: Cargo.toml
apps/aicore-cli/src/: config_store.rs  errors.rs  lib.rs  main.rs  names.rs  terminal.rs  tests.rs
apps/aicore-cli/src/commands/: agent.rs  auth.rs  config.rs  mod.rs  model.rs  provider.rs  runtime.rs  service.rs  status.rs
apps/aicore-cli/src/commands/agent/: mod.rs  session.rs  smoke.rs
apps/aicore-cli/src/commands/kernel/: adoption.rs  adoption_entries.rs  adoption_matrix.rs  component_stdio.rs  invoke.rs  memory_process.rs  memory_write_process.rs  mod.rs  payload.rs  process.rs  route.rs
apps/aicore-cli/src/commands/kernel/adoption_entries/: diagnostic.rs  direct.rs  future.rs  kernel_native.rs  workflow.rs
apps/aicore-cli/src/commands/memory/: mod.rs  read.rs  report.rs  search.rs  wiki.rs  write.rs
apps/aicore-cli/src/commands/memory/write/: core.rs  event_adoption.rs  mod.rs  proposal.rs  remember.rs
apps/aicore-cli/tests/: cli_commands.rs
apps/aicore-cli/tests/cli/: agent_smoke_runtime.rs  auth_model_service.rs  auth_model_service_runtime.rs  config.rs  config_validate_runtime.rs  kernel_invoke.rs  kernel_route.rs  memory_event_adoption.rs  memory_read.rs  memory_read_runtime.rs  memory_write.rs  memory_write_runtime.rs  mod.rs  provider_agent.rs  provider_smoke_runtime.rs  runtime_instance_status_runtime.rs  runtime_smoke.rs  status.rs  support.rs  terminal_modes.rs
apps/aicore-tui/: Cargo.toml
apps/aicore-tui-warp/: AICORE_UPSTREAM.md  Cargo.toml
apps/aicore-tui-warp/app/: Cargo.toml
apps/aicore-tui-warp/crates/aicore_tui_warp/: Cargo.toml
apps/aicore-tui-warp/crates/aicore_tui_warp/src/: main.rs  root_view.rs
apps/aicore-tui-warp/script/: prepare_bundled_resources
apps/aicore-tui/src/: app.rs  interaction.rs  lib.rs  main.rs  render.rs  state.rs  terminal.rs  warp_launcher.rs
apps/aicore-tui/src/render/: blocks.rs  frame.rs  mod.rs  theme.rs  width.rs
apps/aicore-tui/src/ui/: app_state.rs  conversation.rs  layout.rs  mod.rs  render.rs  tests.rs  theme.rs  widgets.rs
apps/aicore-tui/tests/: tui_shell.rs
apps/aicore-web/: Cargo.toml
apps/aicore-web/src/: app.rs  cli.rs  fpk.rs  http.rs  main.rs  status.rs
apps/aicore-web/tests/: web_entry.rs
apps/aicore-web/web/: index.html  package-lock.json  package.json  vite.config.js
apps/aicore/src/: main.rs  runtime_status.rs
apps/aicore/tests/: app_entry.rs
crates/agent/aicore-agent/: Cargo.toml
crates/auth/aicore-auth/: Cargo.toml
crates/config/aicore-config/: Cargo.toml
crates/contracts/aicore-contracts/: Cargo.toml
crates/control/aicore-control/: Cargo.toml
crates/control/aicore-control/src/: component_registry.rs  config.rs  control_plane.rs  instance_registry.rs  lib.rs
crates/event/aicore-event/: Cargo.toml
crates/event/aicore-event-sqlite/: Cargo.toml
crates/event/aicore-event-sqlite/src/: error.rs  lib.rs  retention.rs  row.rs  schema.rs  store.rs
crates/event/aicore-event-sqlite/src/retention/: apply.rs  mod.rs  policy.rs  types.rs
crates/event/aicore-event-sqlite/src/tests/: mod.rs  retention.rs  schema.rs  store.rs  transaction.rs
crates/evolution/aicore-evolution/: Cargo.toml
crates/foundation/aicore-foundation/: Cargo.toml
crates/foundation/aicore-terminal/: Cargo.toml
crates/io/aicore-io/: Cargo.toml
crates/kernel/aicore-kernel/: Cargo.toml
crates/mcp/aicore-mcp-adapter/: Cargo.toml
crates/memory/aicore-memory/: Cargo.toml
crates/memory/aicore-memory-proposal/: Cargo.toml
crates/memory/aicore-memory/src/: agent.rs  ids.rs  kernel.rs  lib.rs  lock.rs  paths.rs  projection.rs  safety.rs  search.rs  store.rs  tests.rs  types.rs
crates/memory/aicore-memory/src/kernel/: audit.rs  mod.rs  proposals.rs  remember.rs  search.rs  wiki.rs
crates/memory/aicore-memory/src/store/: codec.rs  events.rs  mod.rs  proposals.rs  records.rs  schema.rs  state.rs  transaction.rs
crates/memory/aicore-memory/src/tests/: agent_proposals.rs  audit_lock.rs  projection.rs  schema_write.rs  search.rs  support.rs
crates/model/aicore-model-protocol/: Cargo.toml
crates/provider/aicore-provider/: Cargo.toml
crates/provider/aicore-provider/python/: pyproject.toml
crates/provider/aicore-provider/python/aicore_provider_engine/: __init__.py  anthropic_engine.py  fake_engine.py  openai_engine.py  worker.py
crates/provider/aicore-provider/src/: adapter.rs  dummy.rs  engine_ipc.rs  engine_manager.rs  invoker.rs  lib.rs  normalizer.rs  profile.rs  prompt.rs  resolver.rs  runtime.rs  types.rs
crates/provider/aicore-provider/src/tests/: engine.rs  invoker.rs  mod.rs  prompt.rs  resolver.rs  runtime.rs
crates/session/aicore-session-sqlite/: Cargo.toml
crates/session/aicore-session-sqlite/src/: error.rs  lib.rs  schema.rs
crates/session/aicore-session-sqlite/src/store/: active_turn_writer.rs  approval_writer.rs  audit_writer.rs  control_helpers.rs  helpers.rs  message_writer.rs  mod.rs  pending_input_writer.rs  reader.rs  runtime_state_writer.rs  session_turn_writer.rs  stop_writer.rs  writer.rs
crates/session/aicore-session-sqlite/src/tests/: control.rs  mod.rs  non_goals.rs  ordering.rs  recovery.rs  schema.rs  transactions.rs
crates/skill/aicore-skill-protocol/: Cargo.toml
crates/skill/aicore-skill-protocol/src/: lib.rs  registry.rs
crates/skill/aicore-skill-protocol/src/types/: context.rs  descriptor.rs  enums.rs  ids.rs  mod.rs  notice.rs
crates/skill/aicore-skill-protocol/tests/: skill_contract.rs
crates/surface/aicore-surface/: Cargo.toml
crates/surface/aicore-surface/src/: lib.rs
crates/team/aicore-team-protocol/: Cargo.toml
crates/team/aicore-team-protocol/src/types/: context.rs  enums.rs  ids.rs  message.rs  mod.rs  policy.rs  result.rs  spawn.rs
crates/team/aicore-team-protocol/tests/: protocol_contract.rs
docs/architecture/: AICore-OS-Provider请求应用规范.md  AICore-OS-内核协议规范.md  AICore-OS-内核调度与并发规范.md  AICore-OS-应用接入规范.md  AICore-OS-底层规范.md  AICore-OS-组件进程与本地IPC规范.md  AICore-OS-终端输出规范.md  AICore-OS-运行时安装布局规范.md
(+257 files in other folders)
