[workspace]
resolver = "3"
members = [
  "apps/aicore",
  "apps/aicore-cli",
  "apps/aicore-tui",
  "crates/agent/aicore-agent",
  "crates/auth/aicore-auth",
  "crates/config/aicore-config",
  "crates/foundation/aicore-foundation",
  "crates/foundation/aicore-terminal",
  "crates/kernel/aicore-kernel",
  "crates/evolution/aicore-evolution",
  "crates/memory/aicore-memory",
  "crates/provider/aicore-provider",
  "crates/surface/aicore-surface",
  "crates/skills/aicore-skills",
  "crates/tools/aicore-tools",
  "crates/workflows/aicore-workflow",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/user-no-found/AICore-OS.git"
authors = ["user-no-found"]

[workspace.dependencies]
aicore-agent = { path = "crates/agent/aicore-agent" }
aicore-auth = { path = "crates/auth/aicore-auth" }
aicore-config = { path = "crates/config/aicore-config" }
aicore-evolution = { path = "crates/evolution/aicore-evolution" }
aicore-foundation = { path = "crates/foundation/aicore-foundation" }
aicore-terminal = { path = "crates/foundation/aicore-terminal" }
aicore-kernel = { path = "crates/kernel/aicore-kernel" }
aicore-memory = { path = "crates/memory/aicore-memory" }
aicore-provider = { path = "crates/provider/aicore-provider" }
aicore-surface = { path = "crates/surface/aicore-surface" }
aicore-skills = { path = "crates/skills/aicore-skills" }
aicore-tools = { path = "crates/tools/aicore-tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
