[workspace]
resolver = "3"
members = [
  "apps/aicore",
  "apps/aicore-cli",
  "apps/aicore-tui",
  "crates/agent/aicore-agent",
  "crates/auth/aicore-auth",
  "crates/config/aicore-config",
  "crates/foundation/aicore-foundation",
  "crates/foundation/aicore-terminal",
  "crates/io/aicore-io",
  "crates/kernel/aicore-kernel",
  "crates/mcp/aicore-mcp-adapter",
  "crates/evolution/aicore-evolution",
  "crates/event/aicore-event",
  "crates/event/aicore-event-sqlite",
  "crates/memory/aicore-memory",
  "crates/model/aicore-model-protocol",
  "crates/provider/aicore-provider",
  "crates/skill/aicore-skill-protocol",
  "crates/surface/aicore-surface",
  "crates/skills/aicore-skills",
  "crates/session/aicore-session",
  "crates/session/aicore-session-sqlite",
  "crates/tool/aicore-tool-protocol",
  "crates/tool/aicore-tool-runtime",
  "crates/tools/aicore-tools",
  "crates/workflows/aicore-workflow",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/user-no-found/AICore-OS.git"
authors = ["user-no-found"]

[workspace.dependencies]
aicore-agent = { path = "crates/agent/aicore-agent" }
aicore-auth = { path = "crates/auth/aicore-auth" }
aicore-config = { path = "crates/config/aicore-config" }
aicore-evolution = { path = "crates/evolution/aicore-evolution" }
aicore-event = { path = "crates/event/aicore-event" }
aicore-foundation = { path = "crates/foundation/aicore-foundation" }
aicore-io = { path = "crates/io/aicore-io" }
aicore-terminal = { path = "crates/foundation/aicore-terminal" }
aicore-kernel = { path = "crates/kernel/aicore-kernel" }
aicore-mcp-adapter = { path = "crates/mcp/aicore-mcp-adapter" }
aicore-memory = { path = "crates/memory/aicore-memory" }
aicore-model-protocol = { path = "crates/model/aicore-model-protocol" }
aicore-provider = { path = "crates/provider/aicore-provider" }
aicore-skill-protocol = { path = "crates/skill/aicore-skill-protocol" }
aicore-surface = { path = "crates/surface/aicore-surface" }
aicore-skills = { path = "crates/skills/aicore-skills" }
aicore-session = { path = "crates/session/aicore-session" }
aicore-session-sqlite = { path = "crates/session/aicore-session-sqlite" }
aicore-tool-protocol = { path = "crates/tool/aicore-tool-protocol" }
aicore-tool-runtime = { path = "crates/tool/aicore-tool-runtime" }
aicore-tools = { path = "crates/tools/aicore-tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
