[package]
name = "aicore-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-auth.workspace = true
aicore-config.workspace = true
aicore-control.workspace = true
aicore-contracts.workspace = true
aicore-memory.workspace = true
aicore-provider.workspace = true
aicore-runtime.workspace = true
