[package]
name = "aicore-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-agent.workspace = true
aicore-auth.workspace = true
aicore-config.workspace = true
aicore-foundation.workspace = true
aicore-kernel.workspace = true
aicore-memory.workspace = true
aicore-provider.workspace = true
aicore-terminal.workspace = true
serde_json.workspace = true
