[package]
name = "aicore-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-foundation.workspace = true
aicore-surface.workspace = true
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
