[package]
name = "aicore"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-foundation.workspace = true
aicore-kernel.workspace = true
aicore-terminal.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
