[package]
name = "aicore-event-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-event.workspace = true
aicore-foundation.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
