[package]
name = "aicore-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-auth.workspace = true
aicore-config.workspace = true
aicore-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
