[package]
name = "aicore-skill-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-foundation.workspace = true
aicore-tool-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
