[package]
name = "aicore-surface"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aicore-evolution.workspace = true
aicore-memory.workspace = true
aicore-skills.workspace = true
aicore-tools.workspace = true
