[package]
name = "aicore-tui-warp"
version = "0.0.0"
edition = "2021"
authors.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "aicore-tui-warp"
path = "src/main.rs"
test = false

[dependencies]
aicore_bridge.workspace = true
anyhow.workspace = true
pathfinder_color.workspace = true
rust-embed.workspace = true
warpui.workspace = true
